eks/eks-senior-interview-preparation/labs/lab-07-ingress-and-load-balancing/manifests/ingress-instance-mode.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-instance
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance   # node-level health checks
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: crash-test-service, port: { number: 80 } }
